# finite-difference

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  hatch.toml  mkdocs.yml  pyproject.toml
.github/workflows/: codeql.yml
docs/: gen_ref_pages.py  index.md  reference.md
docs/notebooks/: tutorial.ipynb
notebooks/: coefficients.ipynb
src/finite_difference/: __init__.py  coefficients.py  main.py
