[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finite-difference"
description = 'Numerical derivatives using Python.'
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
keywords = [
    "derivative",
    "differentiation",
    "numerics"
]
authors = [
    { name = "Robert Grzonka", email = "robert.grzonka@fau.de" },
]
maintainers = [
    { name = "Robert Grzonka", email = "robert.grzonka@fau.de" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "numpy>=1.23"
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4",
    "mkdocs-gen-files>=0.4",
    "mkdocs-literate-nav>=0.5",
    "mkdocstrings[python]>=0.19",
    "mkdocs-material>=8.5",
    "mkdocs-section-index>=0.3"
]
notebooks = [
    "jupyter>=1.0"
]
lint = [
    "black>=22.10",
    "mypy>=0.991",
    "ruff>=0.0.133"
]
test = [
    "pytest>=7.2",
    "pytest-cov>=4.0"
]

[project.urls]
Documentation = "https://finite-difference.readthedocs.io/"
Tracker = "https://github.com/Rastow/finite-difference/issues"
Source = "https://github.com/Rastow/finite-difference"

[tool.black]
line-length = 120

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = [
    "src/finite_difference",
    "tests"
]

[tool.coverage.run]
branch = true
