[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finite-difference"
description = 'Numerical derivatives using Python.'
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
keywords = [
    "derivative",
    "differentiation",
    "numerics",
]
authors = [
    { name = "Robert Grzonka", email = "robert.grzonka@fau.de" },
]
maintainers = [
    { name = "Robert Grzonka", email = "robert.grzonka@fau.de" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.4",
    "mkdocs-gen-files>=0.4",
    "mkdocs-literate-nav>=0.5",
    "mkdocstrings[python]>=0.19",
    "mkdocs-material>=8.5",
    "mkdocs-section-index>=0.3",
]
lint = [
    "black[jupyter]>=22.10",
    "mypy>=0.991",
    "ruff>=0.0.189",
]
test = [
    "pytest>=7.2",
    "pytest-cov>=4.0",
]

[project.urls]
Documentation = "https://finite-difference.readthedocs.io/"
Tracker = "https://github.com/Rastow/finite-difference/issues"
Source = "https://github.com/Rastow/finite-difference"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
pretty = true
show_column_numbers = true
show_error_codes = true

[tool.ruff]
ignore-init-module-imports = true
line-length = 120
show-source = true
target-version = "py310"
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "E",
    "ERA",
    "F",
    "FBT",
    "I001",
    "ICN",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
extend-select = ["D"]
extend-ignore = [
    "D107",
    "D203",
    "D212",
    "D213",
    "D402",
    "D413",
    "D415",
    "D416",
    "D417",
]

[tool.ruff.isort]
known-first-party = ["finite_difference"]

[tool.pytest.ini_options]
testpaths = [
    "src/finite_difference",
    "tests",
]

[tool.coverage.run]
branch = true
